# relativelylight

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  TODO.md
autocrud/: Cargo.toml
autocrud/src/: alpine.rs  csv_io.rs  engine.rs  lib.rs  openapi.rs  seaorm.rs
autocrud/templates/: admin.html  table.html
docs/: AUTH.md  AUTOCRUD.md  CRUD.md  DATAINPUT.md  PRD.md  TIME.md
examples/adminpanel/: Cargo.toml
examples/adminpanel/src/: main.rs
examples/adminpanel/templates/: shell.html
examples/auth/: Cargo.toml
examples/auth/src/: main.rs
examples/autocrud/: Cargo.toml
examples/autocrud/src/: main.rs
examples/autocrud/templates/: shell.html
examples/crud/: Cargo.toml
examples/crud/src/: main.rs
examples/crud/templates/: shell.html
examples/model/: Cargo.toml
examples/model/src/: lib.rs
examples/model/src/entities/: author.rs  post.rs  post_tag.rs  profile.rs  tag.rs  user.rs
examples/time/: Cargo.toml
examples/time/src/: main.rs
examples/time/templates/: shell.html
relativelylight/: Cargo.toml
relativelylight/assets/: rl-time.js  rl-tz-picker.html
relativelylight/src/: authz.rs  lib.rs  observe.rs  time.rs  validate.rs
relativelylight/src/auth/: group.rs  mod.rs  session.rs  sso.rs  totp.rs  user.rs  user_group.rs
relativelylight/src/crud/: csv_io.rs  engine.rs  mod.rs  openapi.rs  seaorm.rs  ui.rs
relativelylight/templates/: admin.html  table.html
