[workspace]
resolver = "2"
members = ["autocrud", "examples/model", "examples/autocrud", "examples/adminpanel", "examples/auth"]

[workspace.dependencies]
sea-orm = { version = "1.1", features = ["macros", "with-json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
