[package]
name = "autocrud"
version = "0.0.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8", optional = true }
askama = { version = "0.13", optional = true }
utoipa = { version = "5", optional = true }
csv = { version = "1", optional = true }

[features]
default = ["axum"]
axum = ["dep:axum"]
alpine = ["dep:askama"]
openapi = ["dep:utoipa"]
csv = ["dep:csv"]
