[package]
name = "auth-example"
version = "0.0.0"
edition = "2021"
publish = false

# Playground for relativelylight's `auth` module (see docs/AUTH.md), deliberately without `crud`.
# For now it just serves a public page and a page to be gated; gating lands with `auth`.
# (Will later depend on `relativelylight` with features = ["auth"].)
[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["net"] }
