[package]
name = "autocrud-example"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
autocrud = { path = "../../autocrud", features = ["alpine", "openapi", "csv"] }
model = { path = "../model" }
axum = "0.8"
askama = "0.13"
utoipa = "5" # the app owns its OpenAPI document and merges autocrud's endpoints in
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net"] }
